--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -171,8 +171,8 @@ user-select: none;
 
     .posts {
       margin: 0 auto;
-      padding: 1rem;
-      width: 90%;
+      padding: 0;
+      width: 100%;
       background: linear-gradient(to left, rgba(14, 14, 14, 0.623), rgb(0, 0, 0));
       @media screen and (min-width:1024px) {
         padding: 2rem;
